# yakshop

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
docs/: challenge_notes.md  notes.md
examples/: herd.xml
src/: lib.rs  main.rs  shop.rs  yak.rs
src/yak/: mod.rs  products.rs  serialization.rs
static/: index.html
tests/fixtures/: invalid_age.xml  valid_single.xml
yakshop-cli/: Cargo.toml  Dockerfile  README.md
yakshop-cli/src/: main.rs
yakshop-web/: Cargo.toml  Dockerfile  README.md
yakshop-web/src/: main.rs
