[package]
name = "yakshop"
version = "0.1.0"
edition = "2021"
keywords = ["yak", "shop", "simulator"]
categories = ["command-line-utilities", "simulation"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/b-n/yakshop"
homepage = "https://www.github.com/b-n/yakshop"
description = "A simple yak shop simulator"
exclude = ["docs"]

[dependencies]
clap = { version = "4.5.1", features = ['derive']}
serde-xml-rs = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
