[package]
name = "yakshop"
version = "0.1.0"
categories = ["command-line-utilities", "simulation"]
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "A simple yak shop simulator"
exclude = ["/.github", "/docs"]

[workspace]
members = [
  "yakshop-cli",
  "yakshop-web"
]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://www.github.com/b-n/yakshop"
repository = "https://www.github.com/b-n/yakshop"
keywords = ["yak", "shop", "simulator"]

[dependencies]
approx = "0.5.1"
clap = { version = "4.5.1", features = ['derive']}
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
